dashboard admin 수정

--- a/frontend/src/pages/admin/catalog/Catalog.css
+++ b/frontend/src/pages/admin/catalog/Catalog.css
@@ -81,3 +81,12 @@
 .mail-btn:hover {
   background-color: #333;
 }
+
+.catalog-container table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.catalog-container th,
+.catalog-container td {
+  text-align: left;
+}
