--- a/frontend/src/pages/login/Login-Style.css
+++ b/frontend/src/pages/login/Login-Style.css
@@ -138,3 +138,15 @@ textarea {
   background-color: black;
   color: white;
 }
+
+/* 기존 clickable과 동일한 스타일 적용 */
+.clickable-text span {
+  color: #007bff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.clickable-text span:hover {
+  text-decoration: underline;
+}
